<resources>
    <string name="app_name">Electiver</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_schedule">课表</string>>
    <string name="title_elective_assistant">选课助手</string>
    <string name="title_account">账户</string>
    <string name="account_number">账号</string>
    <string name="password">密码</string>
    <string name="log_in">登陆</string>
    <string name="log_out">退出登陆</string>
    <string name="sign_up">注册</string>
    <string name="agree_on_clause">登陆即代表阅读并同意服务条款</string>
    <string name="register_enterpassword">请输入密码</string>
    <string name="register_ensurepassword">请再次输入密码</string>
    <string name="department">院系</string>
    <string name="major">专业</string>
    <string name="grade">年级</string>
    <!-- schedule fragment -->
    <string name="text_mon">星期一</string>
    <string name="text_tues">星期二</string>
    <string name="text_wed">星期三</string>
    <string name="text_thur">星期四</string>
    <string name="text_fri">星期五</string>
    <string name="text_sat">星期六</string>
    <string name="text_sun">星期日</string>
    <!-- schedule fragment -->
    <!-- assistant fragment -->
    <string name="choose">选课</string>
    <string name="have_choosed">已经\n上过</string>
    <string name="course_comment">课程\n评论</string>
    <string name="delete_course">从列表中删除</string>
    <string name="start_search">搜索</string>
    <string name="end_search">显示搜索结果</string>
    <!-- assistant fragment -->

</resources>