<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_schedule">

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.electiver.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_elective_assistant"
        android:name="com.example.electiver.ui.electiveassistant.ElectiveAssistantFragment"
        android:label="@string/title_elective_assistant"
        tools:layout="@layout/fragment_elective_assistant" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.electiver.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>