<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:swipe="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:tag="Bottom3"
        android:weightSum="10">

        <!--ImageView
            android:id="@+id/trash"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_weight="1" /-->

        <Button
            android:id="@+id/swipe_checkComment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/swipe_btn"
            android:text="@string/course_comment"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/white" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/swipe_btn"
            android:text="@string/have_choosed"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/swipe_choose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/choose">
        </Button>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/swipe_courseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/swipe_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="Hover"/>
            <TextView
                android:id="@+id/swipe_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/swipe_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</com.daimajia.swipe.SwipeLayout>